- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    Qt Creator 4.7.0-beta1, Qt Creator 4.8.0-rc1
 - 
    None
 - 
    Windows 7, Linux
 
- 
        bd493f963dc5b7f7b56336793ff08fa58c8e2200 (qt-creator/qt-creator/4.8)
 
When I double-click an error or a warning, all issues become clear lines (they are not deleted), similar to QTCREATORBUG-18951.
It looks like the Clang code model tries to add its warnings for the newly open file on top of the existing warnings, and it somehow collides with the current contents.
- is duplicated by
 - 
                    
QTCREATORBUG-21090 Filtering "yellow"turns off red errors/warnings.
-         
     - Closed
 
 -         
 
- relates to
 - 
                    
QTCREATORBUG-21314 Clang changes Issues pane even if that option is deactivated
-         
 - Closed
 
 -         
 - 
                    
QTCREATORBUG-18951 Issues pane list gets corrupted
-         
     - Closed
 
 -